--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "agora-access-token": "^2.0.4",
+    "agora-token": "^2.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
